override isar_community_generator

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependency_overrides:
     git:
       url: https://github.com/isar-community/isar-community.git
       path: packages/isar_community_flutter_libs
+  isar_community_generator:
+    git:
+      url: https://github.com/isar-community/isar-community.git
+      path: packages/isar_community_generator
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
